# bert_for_longer_texts

./: .env  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  config.py  env_setup.sh  pip-freeze-without-torch.sh  pyproject.toml  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql.yml
belt_nlp/: bert.py  bert_classifier_truncated.py  bert_classifier_with_pooling.py  bert_embedder_pooling.py  bert_regressor_truncated.py  bert_regressor_with_pooling.py  bert_truncated.py  bert_with_pooling.py  exceptions.py  splitting.py  tensor_utils.py  test_bert_embedder_pooling.py
belt_nlp/model/: bert_truncated.py  bert_with_pooling.py  splitting.py
docs/: .buildinfo  README.html  belt_nlp.html  belt_nlp.rst  bert_for_longer_texts.html  bert_for_longer_texts.md  conf.py  genindex.html  git_hooks.md  index.html  index.rst  modules.html  objects.inv  py-modindex.html  roberta_for_longer_texts.md  roberta_interface.md  search.html  searchindex.js  setup_env.md
docs/.doctrees/: README.doctree  belt_nlp.doctree  bert_for_longer_texts.doctree  environment.pickle  index.doctree  modules.doctree
docs/_sources/: README.md.txt  bert_for_longer_texts.md.txt  index.rst.txt
ipython/: example_base_model_fit_predict.ipynb  example_base_model_train_and_evaluate.ipynb  example_get_embedding_vectors.ipynb  test.ipynb
lib/: architecture.py  base_model.py  custom_datasets.py  input_transforms.py  main.py  pooling.py  roberta_architecture.py  roberta_main.py  roberta_pooling.py  text_preprocessors.py
lib/entities/: exceptions.py  learning_curve.py  text_split_params.py  training_history.py
lib/metrics/: get_metrics.py
lib/model/: base.py  bert.py  bert_truncated.py  bert_with_pooling.py  naive.py  splitting.py
lib/preprocessing/: splitting.py  text_preprocessors.py  tokenize.py
notebooks/: example_base_model_fit_predict.ipynb  example_model_with_pooling_fit_predict.ipynb  example_model_with_pooling_train_and_evaluate.ipynb  requirements.txt
notebooks/binary_classification/: base.ipynb  belt.ipynb
notebooks/multiclass/: base.ipynb  belt.ipynb
notebooks/regression/: base.ipynb  belt.ipynb
sample_data/: readme.md  sample.txt  sample_data_pl.csv
sphinx-docs/: bert_for_longer_texts.md  conf.py  index.rst  modules.rst  requirements.txt
stripped/ipython/: example_base_model_fit_predict_stripped.py  example_base_model_train_and_evaluate_stripped.py  example_model_with_pooling_fit_predict_stripped.py  example_model_with_pooling_train_and_evaluate_stripped.py  test_stripped.py
test/: config.py  test_model.py  test_model_with_pooling.py  test_models.py  test_units.py
test/sample_data/: readme.md  sample_data.csv  sample_data_eng.csv
tests/: requirements.txt  test_bert_classifier_truncated.py  test_bert_classifier_with_pooling.py  test_bert_regressor_truncated.py  test_bert_regressor_with_pooling.py  test_bert_truncated.py  test_bert_with_pooling.py  test_splitting.py  test_tokenize_with_pooling.py
tests/model/: test_bert.py  test_bert_truncated.py  test_bert_with_pooling.py  test_naive.py  test_splitting.py  test_tokenize_with_pooling.py
tests/preprocessing/: test_splitting.py  test_tokenize_functions.py
