
[project]
name = "belt_nlp"
version = "0.0.4"
authors = [
  { name="Michał Brzozowski", email="michal.brzozowski@mim.ai" },
  { name="Marek Wachnicki", email="marek.wachnicki@mim.ai" },
]
description = "BELT (BERT For Longer Texts)"
keywords = ["nlp", "natural-language-processing", "text-classification", "transformers", "transfer-learning", "bert", "pytorch", "machine-learning", "deep-learning", "roberta"]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch",
    "transformers",
]

[tool.setuptools]
packages = [
    "belt_nlp",
    "belt_nlp.entities",
    "belt_nlp.model",
]

[project.urls]
"Homepage" = "https://github.com/mim-solutions/bert_for_longer_texts"
"Bug Tracker" = "https://github.com/mim-solutions/bert_for_longer_texts/issues"

[tool.black]
line-length = 120
exclude = '''
/(
    \.git
  | \.pytest_cache
  | venv
  | docs
)/
'''
