
[project]
name = "belt_nlp"
version = "1.0.0"
authors = [
  { name="Michał Brzozowski", email="michal.brzozowski@mim.ai" },
  { name="Marek Wachnicki", email="marek.wachnicki@mim.ai" },
]
description = "BELT (BERT For Longer Texts). BERT-based text classification model for processing texts longer than 512 tokens."
keywords = ["nlp", "natural-language-processing", "text-classification", "transformers", "transfer-learning", "bert", "pytorch", "machine-learning", "deep-learning", "roberta"]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch",
    "transformers",
]

[tool.setuptools]
packages = [
    "belt_nlp",
]

[project.urls]
"Homepage" = "https://github.com/mim-solutions/bert_for_longer_texts"
"Bug Tracker" = "https://github.com/mim-solutions/bert_for_longer_texts/issues"

[tool.black]
line-length = 120
exclude = '''
/(
    \.git
  | \.pytest_cache
  | venv
  | docs
)/
'''
