
[project]
name = "belt_nlp"
version = "1.1.0"
authors = [
  { name="Michał Brzozowski", email="michal.brzozowski@mim.ai" },
  { name="Marek Wachnicki", email="marek.wachnicki@mim.ai" },
]
description = "BELT (BERT For Longer Texts). BERT-based text classification model for processing texts longer than 512 tokens."
keywords = ["nlp", "natural-language-processing", "text-classification", "transformers", "transfer-learning", "bert", "pytorch", "machine-learning", "deep-learning", "roberta"]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=1.7.1",
    "transformers>=4.8",
]

[tool.setuptools]
packages = [
    "belt_nlp",
]

[project.urls]
"Homepage" = "https://github.com/mim-solutions/bert_for_longer_texts"
"Bug Tracker" = "https://github.com/mim-solutions/bert_for_longer_texts/issues"

[tool.black]
line-length = 120
exclude = '''
/(
    \.git
  | \.pytest_cache
  | venv
  | .venv
  | docs
)/
'''

[tool.isort]
skip = [
    "notebooks",
    "venv",
    ".venv"
]

# Sort imports alphabetically
force_sort_within_sections = true
lexicographical = true
single_line_exclusions = ['typing']
order_by_type = false
group_by_package = true

# Make it compatible with black
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
split_on_trailing_comma = true

# Set the line length
line_length = 120

